# hungarian

./: CMakeLists.txt  README.md  hungarian.hpp  main.cpp
src/: hungarian.hpp  main.cpp
src/tests/: test_hungarian.cpp
